--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -378,7 +378,7 @@
 
 #sortDropdown {
   position: relative;
-  width: 180px; /* adjust to match old select width */
+  width: 180px; 
   height: 36px;
   display: flex;
   flex-shrink: 0;
@@ -406,7 +406,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100%;
+  width: 100%; 
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
@@ -541,6 +541,7 @@
   </div>
 
 <div class="inline-group">
+  <label for="sortMode">Sort By:</label>
   <div class="custom-dropdown" id="sortDropdown">
     <div id="sortSelected">Workshop Menu ▼</div>
     <div id="sortOptions">
