--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -406,7 +406,8 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100%; 
+  min-width: 100%; 
+  width: max-content; 
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
