--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -406,8 +406,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  min-width: 100%; 
-  width: max-content; 
+  width: 100%; 
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
