--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -351,6 +351,10 @@
   cursor: pointer;
 }
 
+#dropdownOptions, #sortOptions {
+  width: 100%;
+}
+
 #dropdownSelected {
   display: flex;
   align-items: center;
@@ -371,6 +375,7 @@
 
 .custom-dropdown {
   position: relative;
+  width: max-content;
   height: 40px;
   display: flex;
   flex-shrink: 0;
