--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -336,7 +336,8 @@
   font-size: 14px;
   top: 100%;
   left: 0;
-  width: 100%;
+  width: auto;
+  min-width: 100%;
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
@@ -351,9 +352,6 @@
   cursor: pointer;
 }
 
-#dropdownOptions, #sortOptions {
-  width: 100%;
-}
 
 #dropdownSelected {
   display: flex;
@@ -411,7 +409,8 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100%; 
+  width: auto; 
+  min-width: 100%;
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
