--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -336,7 +336,6 @@
   font-size: 14px;
   top: 100%;
   left: 0;
-  width: auto;
   width: 100%;
   margin-top: -2px;
   background-color: var(--card-bg);
@@ -392,6 +391,7 @@
   align-items: center;
   padding: 0 12px;
   font-size: 14px;
+  width: 100%;
   border: 2px solid var(--accent);
   border-radius: 6px;
   background-color: var(--card-bg);
@@ -409,8 +409,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: auto; 
-  min-width: 100%;
+  width: 100%; 
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
