--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -378,6 +378,11 @@
   flex-shrink: 0;
 }
 
+#sortDropdown, #sortSelected, #sortOptions,
+.custom-dropdown, #dropdownSelected, #dropdownOptions {
+  box-sizing: border-box;
+}
+
 #sortDropdown {
   position: relative;
   width: 150px; 
