--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -385,7 +385,7 @@
 
 #sortDropdown {
   position: relative;
-  width: 150px; 
+  width: 100%; 
   height: 36px;
   display: flex;
   flex-shrink: 0;
