--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -578,6 +578,9 @@
       const results = document.getElementById('results');
       const pagination = document.getElementById('pagination');
 
+const sortSelected = document.getElementById('sortSelected');
+const sortOptions = document.getElementById('sortOptions');
+let currentSort = 'camp-top'; // default
 const dropdownSelected = document.getElementById('dropdownSelected');
 const dropdownOptions = document.getElementById('dropdownOptions');
 let currentSearchBy = 'name'; // default
