--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -164,7 +164,7 @@
     list-style-type: none;
     padding: 16px;
     margin: 0 auto;
-    max-width: var(--card-width);
+    max-width: 600px;
   }
 
   li {
@@ -177,6 +177,7 @@
     border-radius: 6px;
     border: 2px solid var(--accent);
     box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+    width: 100%;
   }
 
   .result-left {
