--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -297,6 +297,19 @@
     text-align: center;
   }
 
+details > summary {
+  display: inline-block;  
+  cursor: pointer;
+  padding: 6px 10px;
+  border-radius: 6px;
+  background: var(--card-bg);
+}
+
+details > summary:hover {
+  background: var(--accent);
+  color: black;
+}
+
   .changelog-entry h4 {
     margin: 0 0 4px 0;
     font-size: 14px;
