--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -295,20 +295,10 @@
     font-weight: bold;
     color: var(--accent);
     text-align: center;
+    max-width: 200px;
+    margin: 0 auto;           
+    padding: 2px 6px;
   }
-
-details > summary {
-  display: inline-block;  
-  cursor: pointer;
-  padding: 6px 10px;
-  border-radius: 6px;
-  background: var(--card-bg);
-}
-
-details > summary:hover {
-  background: var(--accent);
-  color: black;
-}
 
   .changelog-entry h4 {
     margin: 0 0 4px 0;
