--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Fallout 76 C.A.M.P. Item Lookup">
-  <meta property="og:description" content="Tool for finding the location of Fallout 76 C.A.M.P. items in the building menu">
+  <meta property="og:title" content="Fallout 76 C.A.M.P. Item Database">
+  <meta property="og:description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, C.A.M.P. budget cost, Plan/Entitlement requirements, and allows searches.">
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/refs/heads/main/assets/CAMPIcon2.png">
   <meta property="og:url" content="https://yourdomain.com/">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/svg" href="/assets/svg/CAMPIcon.svg">
-  <title>Fallout 76 C.A.M.P. Item Lookup</title>
+  <title>Fallout 76 C.A.M.P. Item Database</title>
  <style>
   :root {
     --accent: #ffc00f;
@@ -487,6 +487,16 @@
 <div class="container">
     <details>
       <summary>Version History</summary>
+      <div class="changelog-entry">
+        <h4>v3.0</h4>
+        <ul><li>Expansion towards a more generalized database tool:
+- Added category icons
+- Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future
+- Added budget costs
+- Added search filters
+- Added different search options
+- General UI cleanup</li></ul>
+      </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
         <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
