--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -495,7 +495,7 @@
 <li>- Added budget costs<li>
 <li>- Added search filters<li>
 <li>- Added different search options<li>
-<li>- General UI cleanup</li></ul>
+<li>- General UI cleanup/minor fixes</li></ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
