--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -488,14 +488,16 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
-        <h4>v3.0</h4>
-        <ul><li>Expansion towards a more generalized database tool:<li>
-<li>- Added category icons<li>
-<li>- Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future<li>
-<li>- Added budget costs<li>
-<li>- Added search filters<li>
-<li>- Added different search options<li>
-<li>- General UI cleanup/minor fixes</li></ul>
+<h4>v3.0</h4>
+<ul>
+  <li>Expansion towards a more generalized database tool:</li>
+  <li>Added category icons</li>
+  <li>Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future</li>
+  <li>Added budget costs</li>
+  <li>Added search filters</li>
+  <li>Added different search options</li>
+  <li>General UI cleanup/minor fixes</li>
+</ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
