--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -488,17 +488,15 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
-<h4>v3.0</h4>
-<ul>
-  <li>Expansion towards a more generalized database tool:</li>
-  <li>Added category icons</li>
-  <li>Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future</li>
-  <li>Added budget costs</li>
-  <li>Added search filters</li>
-  <li>Added different search options</li>
-  <li>General UI cleanup/minor fixes</li>
-</ul>
-      </div>
+<div class="changelog-text">
+  Expansion towards a more generalized database tool:<br>
+  Added category icons<br>
+  Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future<br>
+  Added budget costs<br>
+  Added search filters<br>
+  Added different search options<br>
+  General UI cleanup/minor fixes
+</div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
         <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
