--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -488,15 +488,15 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
-<div class="changelog-text">
-  Expansion towards a more generalized database tool:<br>
-  Added category icons<br>
-  Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future<br>
-  Added budget costs<br>
-  Added search filters<br>
-  Added different search options<br>
-  General UI cleanup/minor fixes
-</div>
+        <h4>v3.0</h4>
+        <ul><li>Expansion towards a more generalized database tool:<br>
+- Added category icons<br>
+- Added plan/entitlement requirements. Icons identify the source to a limited extent, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop. This will be expanded upon in the future<br>
+- Added budget costs<br>
+- Added search filters<br>
+- Added different search options<br>
+- General UI cleanup</li></ul>
+      </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
         <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
