--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -360,6 +360,64 @@
   cursor: pointer;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+#filterOptions {
+  display: none;
+  position: absolute;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 8px;
+  padding: 8px;
+  z-index: 100;
+  width: 400px; /* adjust as needed */
+}
+
+.filter-columns {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.filter-column {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.filter-column .filter-header {
+  font-weight: bold;
+  margin-bottom: 4px;
+  color: var(--accent);
+}
+
+.filter-column button {
+  padding: 4px 8px;
+  border: 1px solid var(--accent);
+  border-radius: 6px;
+  background-color: var(--card-bg);
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.filter-column button.active {
+  background-color: var(--accent);
+  color: black;
+}
+
+.clear-filters {
+  margin-top: 8px;
+  padding: 4px 8px;
+  border: 1px solid var(--accent);
+  border-radius: 6px;
+  cursor: pointer;
+  background-color: var(--bg);
+  color: var(--accent);
+}
+
 
 #searchBox {
   flex: 1;
@@ -527,33 +585,38 @@
   </div>
 </div>
 
-<div class="filter-section">
-  <div class="filter-header">Placement Condition</div>
-  <div class="filter-grid" id="placementFilters">
-    <button data-filter="book">Plan</button>
-    <button data-filter="entm">Entitlement</button>
+<!-- Filter Dropdown -->
+<div class="dropdown filterDropdown">
+  <button id="filterSelected">Filters</button>
+  <div id="filterOptions" class="dropdown-options">
+    <div class="filter-columns">
+      <div class="filter-column">
+        <div class="filter-header">Placement Condition</div>
+        <button data-filter="book">Plan</button>
+        <button data-filter="entm">Entitlement</button>
+      </div>
+      <div class="filter-column">
+        <div class="filter-header">Workshop Category</div>
+        <button data-filter="C.A.M.P. Pieces">C.A.M.P. Pieces</button>
+        <button data-filter="Decorations">Decorations</button>
+        <button data-filter="Defense">Defense</button>
+        <button data-filter="Dwellers">Dwellers</button>
+        <button data-filter="Furniture">Furniture</button>
+        <button data-filter="Lights">Lights</button>
+        <button data-filter="Power">Power</button>
+        <button data-filter="Quest">Quest</button>
+        <button data-filter="Resources">Resources</button>
+        <button data-filter="Storage">Storage</button>
+        <button data-filter="Structure">Structure</button>
+        <button data-filter="Utility">Utility</button>
+        <button data-filter="Wall Decoration">Wall Decoration</button>
+        <button data-filter="Wallpapers">Wallpapers</button>
+      </div>
+    </div>
+    <button id="clearFilters" class="clear-filters">Clear All</button>
   </div>
-
-  <div class="filter-header">Workshop Category</div>
-  <div class="filter-grid" id="categoryFilters">
-    <button data-filter="C.A.M.P. Pieces">C.A.M.P. Pieces</button>
-    <button data-filter="Decorations">Decorations</button>
-    <button data-filter="Defense">Defense</button>
-    <button data-filter="Dwellers">Dwellers</button>
-    <button data-filter="Furniture">Furniture</button>
-    <button data-filter="Lights">Lights</button>
-    <button data-filter="Power">Power</button>
-    <button data-filter="Quest">Quest</button>
-    <button data-filter="Resources">Resources</button>
-    <button data-filter="Storage">Storage</button>
-    <button data-filter="Structure">Structure</button>
-    <button data-filter="Utility">Utility</button>
-    <button data-filter="Wall Decoration">Wall Decoration</button>
-    <button data-filter="Wallpapers">Wallpapers</button>
-  </div>
-
-  <button id="clearFilters" class="clear-filters">Clear All Filters</button>
 </div>
+
 
 
     <!-- Version history -->
@@ -915,6 +978,58 @@ clearBtn.addEventListener('click', () => {
 });
 
 // reset filters on page load
+window.addEventListener('load', () => {
+  placementActive.clear();
+  categoryActive.clear();
+  placementBtns.forEach(btn => btn.classList.remove('active'));
+  categoryBtns.forEach(btn => btn.classList.remove('active'));
+});
+
+const filterSelected = document.getElementById('filterSelected');
+const filterOptions = document.getElementById('filterOptions');
+const placementBtns = filterOptions.querySelectorAll('[data-filter="book"], [data-filter="entm"]');
+const categoryBtns = filterOptions.querySelectorAll('#filterOptions button[data-filter]:not([data-filter="book"]):not([data-filter="entm"])');
+const clearBtn = document.getElementById('clearFilters');
+
+let placementActive = new Set();
+let categoryActive = new Set();
+
+// Toggle dropdown
+filterSelected.addEventListener('click', e => {
+  e.stopPropagation();
+  filterOptions.style.display = filterOptions.style.display === 'block' ? 'none' : 'block';
+});
+
+// Close on outside click
+document.addEventListener('click', () => filterOptions.style.display = 'none');
+
+// Filter toggle function
+function toggleFilter(btn, set) {
+  const value = btn.dataset.filter;
+  if (set.has(value)) {
+    set.delete(value);
+    btn.classList.remove('active');
+  } else {
+    set.add(value);
+    btn.classList.add('active');
+  }
+  renderResults(searchBox.value);
+}
+
+// Attach click events
+placementBtns.forEach(btn => btn.addEventListener('click', () => toggleFilter(btn, placementActive)));
+categoryBtns.forEach(btn => btn.addEventListener('click', () => toggleFilter(btn, categoryActive)));
+
+// Clear all filters
+clearBtn.addEventListener('click', () => {
+  placementActive.clear();
+  categoryActive.clear();
+  placementBtns.forEach(btn => btn.classList.remove('active'));
+  categoryBtns.forEach(btn => btn.classList.remove('active'));
+  renderResults(searchBox.value);
+});
+
+// Reset filters on page load
 window.addEventListener('load', () => {
   placementActive.clear();
   categoryActive.clear();
