--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -396,7 +396,7 @@
 
 #sortDropdown {
   position: relative;
-  width: max-content; 
+  width: 150px; 
   height: 36px;
   display: flex;
   flex-shrink: 0;
